small artwork の表示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Sumire</string>
+
+    <string name="small_artwork_description">Small Artwork Only</string>
 </resources>
